# cppflare

./: CMakeLists.txt
flare/: Entity.h  utils.h
include/: entity.h  utils.h
src/: main.cpp
